--- a/steff_web/src/index.html
+++ b/steff_web/src/index.html
@@ -1,13 +1,115 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>SteffWeb</title>
+  <meta charset="UTF-8">
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>Andreas Steffensen - Software Engineer</title>
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="bg-gray-100 text-gray-800 font-sans leading-normal tracking-normal">
+  <app-root>
+    <!-- Navigation -->
+    <nav class="bg-gray-800 p-2 mt-0 fixed w-full z-10 top-0">
+      <div class="container mx-auto flex flex-wrap items-center">
+        <div class="flex w-full md:w-1/2 justify-center md:justify-start text-white font-extrabold">
+          <a class="text-white no-underline hover:text-white hover:no-underline" href="#">
+            Your Name
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div class="pt-24">
+      <div class="container mx-auto flex items-center flex-wrap">
+        <div class="w-full md:w-1/2 text-center md:text-left">
+          <p class="text-5xl md:text-6xl font-bold leading-tight">Your Name</p>
+          <p class="text-2xl md:text-3xl mt-3 text-gray-600">Software Engineer</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Main Content -->
+    <div class="container mx-auto bg-white p-8 mt-12 rounded shadow-lg">
+      <!-- Education Section -->
+      <section class="mb-6">
+        <h2 class="text-2xl font-bold mb-2">Education</h2>
+        <div class="pl-4">
+          <p class="text-lg"><strong>Your University</strong> - Bachelor's Degree in Computer Science</p>
+          <p class="text-gray-600">Graduation Year: 20XX</p>
+        </div>
+      </section>
+
+      <!-- Experience Section -->
+      <section class="mb-6">
+        <h2 class="text-2xl font-bold mb-2">Experience</h2>
+        <div class="pl-4">
+          <p class="text-lg"><strong>Company Name</strong> - Software Engineer</p>
+          <p class="text-gray-600">Duration: Month/Year - Present</p>
+          <ul class="list-disc pl-6">
+            <li>Responsibility/Accomplishment 1</li>
+            <li>Responsibility/Accomplishment 2</li>
+            <!-- Add more items as needed -->
+          </ul>
+        </div>
+      </section>
+
+      <!-- Skills Section -->
+      <section>
+        <h2 class="text-2xl font-bold mb-2">Skills</h2>
+        <div class="pl-4">
+          <ul class="list-disc">
+            <li>Programming Languages: JavaScript, Python, Java</li>
+            <li>Web Development: HTML, CSS, React</li>
+            <li>Database Management: SQL, MongoDB</li>
+            <!-- Add more skills as needed -->
+          </ul>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section class="mt-6">
+        <h2 class="text-2xl font-bold mb-2">Contact Me</h2>
+        <form action="#" method="post">
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            <!-- First Name -->
+            <div>
+              <label for="first_name" class="block text-sm font-medium text-gray-600">First Name</label>
+              <input type="text" id="first_name" name="first_name" class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <!-- Last Name -->
+            <div>
+              <label for="last_name" class="block text-sm font-medium text-gray-600">Last Name</label>
+              <input type="text" id="last_name" name="last_name" class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <!-- Email -->
+            <div>
+              <label for="email" class="block text-sm font-medium text-gray-600">Email</label>
+              <input type="email" id="email" name="email" class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <!-- Phone Number -->
+            <div>
+              <label for="phone" class="block text-sm font-medium text-gray-600">Phone Number</label>
+              <input type="tel" id="phone" name="phone" class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <!-- Message -->
+            <div class="col-span-2">
+              <label for="message" class="block text-sm font-medium text-gray-600">Message</label>
+              <textarea id="message" name="message" rows="4" class="mt-1 p-2 w-full border rounded-md"></textarea>
+            </div>
+            <!-- Submit Button -->
+            <div class="col-span-2 text-center">
+              <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600">
+                Submit
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
+    </div>
+  </app-root>
 </body>
 </html>
