added personal info

--- a/pageV.1/index.html
+++ b/pageV.1/index.html
@@ -23,10 +23,11 @@
 
     <!-- Hero Section -->
     <div class="pt-24">
-        <div class="container mx-auto flex items-center flex-wrap">
+        <div class="container mx-auto flex items-center flex-wrap relative z-10">
             <div class="w-full md:w-1/2 text-center md:text-left">
-                <p class="text-5xl md:text-6xl font-bold leading-tight">Andreas Steffensen</p>
-                <p class="text-2xl md:text-3xl mt-3 text-gray-600">Software Engineer</p>
+                <p class="text-5xl md:text-6xl font-bold leading-tight text-black">Andreas Steffensen</p>
+                <p class="text-2xl md:text-3xl mt-3 text-black">Software Engineer</p>
+                <img src="./.png" width="810" height="760" alt="Andreas Steffensen" class="absolute top-0 right-0 w-1/4 h-auto">
             </div>
         </div>
     </div>
