--- a/pageV.1/index.html
+++ b/pageV.1/index.html
@@ -27,7 +27,7 @@
             <div class="w-full md:w-1/2 text-center md:text-left">
                 <p class="text-5xl md:text-6xl font-bold leading-tight text-black">Andreas Steffensen</p>
                 <p class="text-2xl md:text-3xl mt-3 text-black">Software Engineer</p>
-                <img src="./.png" width="810" height="760" alt="Andreas Steffensen" class="absolute top-0 right-0 w-1/4 h-auto">
+                <img src=".\CV_Website\pageV.1\Profilbillede.jpg" width="810" height="760" alt="Andreas Steffensen" class="absolute top-0 right-0 w-1/4 h-auto">
             </div>
         </div>
     </div>
