--- a/pageV.1/index.html
+++ b/pageV.1/index.html
@@ -27,7 +27,7 @@
             <div class="w-full md:w-1/2 text-center md:text-left">
                 <p class="text-5xl md:text-6xl font-bold leading-tight text-black">Andreas Steffensen</p>
                 <p class="text-2xl md:text-3xl mt-3 text-black">Software Engineer</p>
-                <img src=".\CV_Website\pageV.1\Profilbillede.jpg" width="810" height="760" alt="Andreas Steffensen" class="absolute top-0 right-0 w-1/4 h-auto">
+                <img src="./Profilbillede.jpg" width="810" height="760" alt="Andreas Steffensen" class="absolute top-0 right-0 w-1/4 h-auto"/>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
                 <p class="text-gray-600">Duration: sep/2022 - aug/2023 - 1 year </p>
                 <ul class="list-disc pl-6">
                     <li>
-                        Project lead on Drive-mode for new versions of cranes. Allowing craneoperaters to go from controlling the to driving the truck on
+                        Project lead on Drive-mode for new versions of cranes. Allowing craneoperaters to go from controlling the crane to driving the truck on
                         which the crane was mounted.
                     </li>
                     <li>
@@ -111,7 +111,7 @@
                 <ul class="list-disc">
                     <li>Spoken Languages: Danish - Nativly, English - Fluently, German - Basic, Swedish - Basic, Norwegian - Basic</li>
                     <li>Programming Languages: C, C++, Python, C#, Javascript, Typescript</li>
-                    <li>Embedded: linux </li>
+                    <li>Embedded: linux, Tasking-C </li>
                     <li>Web Development: HTML, CSS, Angular, React, Blazor, Json</li>
                     <li>Database Management: SQL</li>
                     <!-- Add more skills as needed -->
